# rubs

./: CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE-MIT  README.md  dist-workspace.toml  justfile  release-plz.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  release-plz.yml  release.yml
src/: generate.rs  lib.rs  main.rs  tui.rs  wordlist.rs
