[package]
name = "rubs"
version = "0.1.0"
edition = "2024"
description = "XKCD-style passphrase generator with TUI and cryptographic extensions"
license = "MIT OR BSD-2-Clause"
readme = "README.md"
repository = "https://github.com/axeberg/rubs"
homepage = "https://github.com/axeberg/rubs"

[dependencies]
rand = "0.9"
clap = { version = "4", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
